# szkolka-repo-1

./: .gitignore  26-05-task.py  28-05-langchain-integration.py  README.md  chat_app.py  client.py  gpt-4o-gen-user-stories.py  gpt-4o-script.py  gpt-o4-gen-user-stories.py  gpt-o4-script.py  langchain_rag.py  main.py  new_file.py  pyproject.toml  quiz-bot.py  rags2.py  requirements.txt  setup.py  start_server.py  template.bicep  testing-nb.ipynb  vectorstores_and_embeddings.ipynb
backlog/: sprint1-0.1.md  sprint1-0.23333333333333334.md  sprint1-0.3666666666666667.md  sprint1-0.5.md  sprint1-0.6333333333333333.md  sprint1-0.7666666666666666.md  sprint1-0.9.md  sprint1.md
my_first_azure_func/: .funcignore  client.py  function_app.py
prompts/: quiz_assessor.txt  quiz_host.txt
src/awesome_package/: __init__.py
src/my_client/: __init__.py
src/new_package/: __init__.py
src/quiz/: README.md  main.py
